tests/baselines/reference/declareAlreadySeen.errors.txt
==== tests/cases/compiler/declareAlreadySeen.ts (4 errors) ====
    module M {
        declare declare var x;
                ~~~~~~~
!!! error TS1028: Accessibility modifier already seen.
        declare declare function f();
                ~~~~~~~
!!! error TS1028: Accessibility modifier already seen.
    
        declare declare module N { }  
                ~~~~~~~
!!! error TS1028: Accessibility modifier already seen.
    
        declare declare class C { }
                ~~~~~~~
!!! error TS1028: Accessibility modifier already seen.
    }